added data validation/error handling
